--- a/style.css
+++ b/style.css
@@ -9,3 +9,21 @@
 body{
     background-color: #BC8F8F;
 }
+
+.container{
+    background-color: #ffffff;
+    width: 90vmin;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    padding: 80px 50px;
+    border-radius: 10px;
+    box-shadow: 0 20px 40px rgba(38, 33, 61, 0.2);
+}
+
+.search-box{
+    width: 100px;
+    display: flex;
+    justify-content: space-between;
+}
