--- a/style.css
+++ b/style.css
@@ -69,3 +69,21 @@ body{
     outline: none;
     font-size: 18px;
 }
+
+.result .details {
+    display: flex;
+    gap: 10px;
+    color: #b3b6d4;
+    margin: 5px 0 20px 0;
+    font-size: 14px;
+}
+
+.word-meaning {
+    color: #575a7b;
+}
+
+.word-example{
+    color: #575a7b;
+    font-style: italic;
+    border-left: 5px solid #BC8F8F;
+}
