--- a/style.css
+++ b/style.css
@@ -86,4 +86,6 @@ body{
     color: #575a7b;
     font-style: italic;
     border-left: 5px solid #BC8F8F;
+    padding-left: 20px;
+    margin-top: 30px;
 }
