--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-*:not(i){
-    font-family: "Poppins",sans-serif;
+*:not(i) {
+    font-family: "Poppins", sans-serif;
 }
-body{
-    background-color: #BC8F8F;
+body {
+    background-color:  #BC8F8F;
 }
-
-.container{
+.container {
     background-color: #ffffff;
     width: 90vmin;
     position: absolute;
@@ -21,55 +20,47 @@ body{
     border-radius: 10px;
     box-shadow: 0 20px 40px rgba(38, 33, 61, 0.2);
 }
-
-.search-box{
-    width: 300px;
+.search-box {
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
-
 .search-box input {
-        padding: 5px;
-        width: 70%;
-        border: none;
-        outline: none;
-        border-bottom: 3px solid #BC8F8F;
-        font-size: 16px;
+    padding: 5px;
+    width: 70%;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid  #BC8F8F;
+    font-size: 16px;
 }
-
-.search-box button{
+.search-box button {
     padding: 15px 0;
     width: 25%;
-    background-color: #BC8F8F;
+    background-color:  #BC8F8F;
     border: none;
     outline: none;
     color: #ffffff;
     border-radius: 5px;
 }
-
-.result{
+.result {
     position: relative;
 }
-
 .result h3 {
     font-size: 30px;
     color: #1f194c;
 }
-
 .result .word {
     display: flex;
     justify-content: space-between;
     margin-top: 80px;
 }
-
 .result button {
     background-color: transparent;
-    color: #BC8F8F;
+    color:  #BC8F8F;
     border: none;
     outline: none;
     font-size: 18px;
 }
-
 .result .details {
     display: flex;
     gap: 10px;
@@ -77,15 +68,17 @@ body{
     margin: 5px 0 20px 0;
     font-size: 14px;
 }
-
 .word-meaning {
     color: #575a7b;
 }
-
-.word-example{
+.word-example {
     color: #575a7b;
     font-style: italic;
-    border-left: 5px solid #BC8F8F;
+    border-left: 5px solid  #BC8F8F;
     padding-left: 20px;
     margin-top: 30px;
+}
+.error {
+    margin-top: 80px;
+    text-align: center;
 }
